# xls_api_demo

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  get-poetry.py  pyproject.toml
src/xls_api_demo/: excel_parser.py
tests/excel_files/: test_basic_double_after_column_x_after_444.xls  test_basic_double_after_column_x_after_444.xlsx  test_basic_x_after_444.xls  test_basic_x_after_444.xlsx  test_basic_x_before_444.xls  test_basic_x_before_444.xlsx  test_data_after_empty_row_x_before_444.xls  test_data_after_empty_row_x_before_444.xlsx  test_data_on_2nd_sheet_plus_3rd_sheet_x_before_444.xls  test_data_on_2nd_sheet_plus_3rd_sheet_x_before_444.xlsx  test_data_on_2nd_sheet_x_before_444.xls  test_data_on_2nd_sheet_x_before_444.xlsx  test_error_double_column.xls  test_error_double_column.xlsx  test_error_empty.xls  test_error_empty.xlsx  test_error_equal_columns.xls  test_error_equal_columns.xlsx  test_error_non_integer_value_in_column.xls  test_error_non_integer_value_in_column.xlsx  test_error_only_one_column.xls  test_error_only_one_column.xlsx  test_fake_data_after_empty_column_x_before_444.xls  test_fake_data_after_empty_column_x_before_444.xlsx
tests/unit/: test_excel_parser.py
